--- a/roles/pbis/tasks/main.yml
+++ b/roles/pbis/tasks/main.yml
@@ -15,17 +15,17 @@
      shell: /opt/pbis/bin/lsa get-status |grep Netbios |awk '{print $3}'
      register: domain_status
   
-  #- name: What is in the variable
-  #  debug: var=domain_status.stdout
 
    - name: Join the machine if it is not already on the domain.
      command: /usr/bin/domainjoin-cli join internetq.corp {{ username }} {{password}}
      when: domain_status.stdout != "MYDOMAIN"
+     - notify: config pbis
 
-   - name: assumedefaultdomain
-     command: /opt/pbis/bin/config AssumeDefaultDomain true
-     # when: domain_status.stdout != "MYDOMAIN"
 
-   - name: bash env sh
-     command: /opt/pbis/bin/config  LoginShellTemplate /bin/bash
-     # when: domain_status.stdout != "MYDOMAIN"
+ #  - name: assumedefaultdomain
+ #    command: /opt/pbis/bin/config AssumeDefaultDomain true
+ #     when: domain_status.stdout != "MYDOMAIN"
+
+ #  - name: bash env sh
+ #    command: /opt/pbis/bin/config  LoginShellTemplate /bin/bash
+ #    when: domain_status.stdout != "MYDOMAIN"
