--- a/roles/pbis/handlers/main.yml
+++ b/roles/pbis/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
 # handlers file for pbis
 
-   - name: set AssumeDefaultDomain
-     command: /opt/pbis/bin/config AssumeDefaultDomain true
+   - name: config pbis domain 
+     command: /opt/pbis/bin/onfig AssumeDefaultDomain true
 
-   - name: set bash
+   - name: config pbis shell
      command: /opt/pbis/bin/config  LoginShellTemplate /bin/bash
 
 
