--- a/roles/pbis/tasks/main.yml
+++ b/roles/pbis/tasks/main.yml
@@ -19,13 +19,6 @@
    - name: Join the machine if it is not already on the domain.
      command: /usr/bin/domainjoin-cli join internetq.corp {{ username }} {{password}}
      when: domain_status.stdout != "MYDOMAIN"
-     - notify: config pbis
-
-
- #  - name: assumedefaultdomain
- #    command: /opt/pbis/bin/config AssumeDefaultDomain true
- #     when: domain_status.stdout != "MYDOMAIN"
-
- #  - name: bash env sh
- #    command: /opt/pbis/bin/config  LoginShellTemplate /bin/bash
- #    when: domain_status.stdout != "MYDOMAIN"
+     notify: 
+          - config pbis shell
+          - config pbis domain
