--- a/roles/pbis/tasks/main.yml
+++ b/roles/pbis/tasks/main.yml
@@ -4,7 +4,7 @@
      when: ansible_os_family == 'RedHat'
 
    - include: ubuntu.yml
-     when: when: ansible_lsb.id == 'Ubuntu'
+     when: ansible_lsb.id == 'Ubuntu'
 
 
    - name: check the Domain status
