--- a/roles/pbis/tasks/main.yml
+++ b/roles/pbis/tasks/main.yml
@@ -6,15 +6,13 @@
    - include: ubuntu.yml
      when: ansible_lsb.id == 'Ubuntu'
 
-
    - name: check the Domain status
      shell: /opt/pbis/bin/lsa get-status |grep Netbios |awk '{print $3}'
      register: domain_status
 
-
    - name: Join the machine if it is not already on the domain.
-     command: /usr/bin/domainjoin-cli join internetq.corp {{ username }} {{password}}
-     when: domain_status.stdout != "{{mydomain}}"
+     command: /usr/bin/domainjoin-cli join {{ domain_fqdn }} {{ domain_user }} {{ domain_pass }}
+     when: domain_status.stdout != "{{ domain_netbios }}"
      notify:
           - config pbis shell
           - config pbis domain
