--- a/roles/pbis/tasks/ubuntu.yml
+++ b/roles/pbis/tasks/ubuntu.yml
@@ -9,7 +9,7 @@
      apt_repository: repo='deb http://repo.pbis.beyondtrust.com/apt pbiso main' state=present
 
    - name: Ubuntu | apt-get update
-     apt: update_cache=yes
+     apt: update_cache=yes cache_valid_time=3600
 
    - name: Ubuntu | apt-get install pbis-open
      apt: name=pbis-open state=latest
