--- a/roles/pbis/meta/main.yml
+++ b/roles/pbis/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
-  author: Alen Stimec
-  description: Ansible playbook for deploying PowerBroker Identity Services PBIS Open Edition for RedHat/CentOS
+  author: "Alen Stimec, Rob Orford"
+  description: Ansible playbook for deploying PowerBroker Identity Services PBIS Open Edition for RedHat/CentOS/Ubuntu
   company: future.inc
   license: MIT
   min_ansible_version: 1.2
@@ -10,9 +10,11 @@ galaxy_info:
   - name: EL
     versions:
      - 6
+     - 7
   - name: Ubuntu
     versions:
      - 'trusty'
+     - 'xenial'
 
   categories:
   - system
