--- a/site.yml
+++ b/site.yml
@@ -2,7 +2,7 @@
 
 # file: site.yml
   - include: redhat.yml
-    when: ansible_os_family == "RedHat" and ansible_lsb.major_release|int >= 6
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 6
 
   - include: ubuntu.yml
-    when: ansible_lsb.id == "Ubuntu" and ansible_lsb.major_release|int >= 14
+    when: ansible_os_family == "Debian" and ansible_lsb.id == "Ubuntu" and ansible_lsb.major_release|int >= 14
