--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,9 +10,11 @@ galaxy_info:
   - name: EL
     versions:
      - 6
+     - 7
   - name: Ubuntu
     versions:
      - trusty
+     - xenial
 
   categories:
   - system
